Replaced ArrayDeques with ArrayLists in BulletManager.