@@ -1,51 +1,48 @@
 package net.littlecoder.core;
 
 import java.util.ArrayDeque;
+import java.util.ArrayList;
 import java.util.Iterator;
 
 import playn.core.Surface;
 
 class BulletManager {
 
-    private ArrayDeque<Bullet> activeBullets;
-    private ArrayDeque<Bullet> inactiveBullets;
+    private ArrayList<Bullet> active;
+    private ArrayList<Bullet> inactive;
 
     private Surface surface;
 
     public BulletManager(Surface surface) {
 	this.surface = surface;
-	activeBullets = new ArrayDeque<Bullet>();
-	inactiveBullets = new ArrayDeque<Bullet>();
+	active = new ArrayList<Bullet>();
+	inactive = new ArrayList<Bullet>();
     }
 
     public void addBullet(Ship ship) {
-	if (inactiveBullets.isEmpty())
-	    activeBullets.add(new Bullet(ship));
+	if (inactive.isEmpty())
+	    active.add(new Bullet(ship));
 	else {
-	    Bullet b = inactiveBullets.removeFirst();
+	    Bullet b = inactive.remove(0);
 	    b.reinitialize(ship);
-	    activeBullets.add(b);
+	    active.add(b);
 	}
     }
 
     public void paint(float alpha) {
-	Iterator i = activeBullets.iterator();
-	while (i.hasNext()) {
-	    Bullet b = (Bullet)i.next();
-	    b.paint(alpha);
-	}
+	for (int i = 0; i < active.size(); i++)
+	    active.get(i).paint(alpha);
     }
 
     public void update(float delta) {
-	Iterator i = activeBullets.iterator();
-	while (i.hasNext()) {
-	    Bullet b = (Bullet)i.next();
+	for (int i = active.size() - 1; i >= 0; i--) {
+	    Bullet b = active.get(i);
 	    b.update(delta);
 	    if (b.isDead()) {
-		inactiveBullets.add(b);
-		i.remove();
-	    }
-	}	
+		inactive.add(b);
+		active.remove(i);
+	    }	    
+	}
     }
 
     public int detectCollisions(AsteroidManager asteroidManager) {
@@ -54,9 +51,8 @@ class BulletManager {
 	Iterator i = asteroidManager.asteroids().iterator();
 	while (i.hasNext()) {
 	    Asteroid a = (Asteroid)i.next();
-	    Iterator j = activeBullets.iterator();
-	    while (j.hasNext()) {
-		Bullet b = (Bullet)j.next();
+	    for (int j = 0; j < active.size(); j++) {
+		Bullet b = active.get(j);
 		if (!b.isDead() && a.isCollidingWith(b)) {
 		    a.die();
 		    b.die();
